start recipe template, fixed horizontal scroll on home page

--- a/client/css/header-footer-style.css
+++ b/client/css/header-footer-style.css
@@ -9,7 +9,15 @@ header{
     width: 100%;
 
     h1 {
-        margin: 0;
-        padding: .5em
+        margin: .5;
+        /* padding: .5em */
     }
 }
+body {
+    margin: 0;
+    background-color: var(--page-background-color);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
