--- a/client/css/home-style.css
+++ b/client/css/home-style.css
@@ -2,24 +2,15 @@
   --page-background-color: #ffb22c;
   --recipe-card-text-color: #1f1f1f;
   --recipe-card-background-color: #f7f7f7;
-  --button-background-color: #69392B;
-  --button-text-color: #F1E2DF;
-}
-html,
-body {
-  margin: 0;
-  background-color: var(--page-background-color);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
+  --button-background-color: #69392b;
+  --button-text-color: #f1e2df;
 }
 
 .hidden {
   visibility: hidden;
 }
 input {
-  margin-top: 1em;
+  margin-bottom: 1em;
   background-color: white;
   padding: 1em;
   border-radius: 10em;
@@ -83,7 +74,7 @@ input {
   button {
     background-color: var(--button-background-color);
     color: var(--button-text-color);
-    padding: .3em;
+    padding: 0.3em;
     border-radius: 5em;
   }
 }
@@ -105,20 +96,16 @@ section {
 .recipe-container {
   display: flex;
   width: 100%;
-  /* margin: 1em; */
-  /* padding-left: 2em; */
-  margin-left: 2em;
-  margin-right: 2em;
 }
 
 @media only screen and (max-width: 780px) {
   .recipe-container {
-    /* flex-direction: column; */
+    flex-direction: column;
     /* justify-content: center; */
     align-items: center;
     justify-content: space-around;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
   .recipe-card {
     flex-direction: column;
